--- a/src/app/pages/maliyet/kapi-maliyet/kapi-maliyet.component.html
+++ b/src/app/pages/maliyet/kapi-maliyet/kapi-maliyet.component.html
@@ -1,160 +1,3 @@
-<!-- 
-
-<div  style="display: grid; grid-template-columns:2fr 2fr 2fr 3fr  ; gap: 4px;">
-
-
-    <div  style="display: flex; flex-direction: column; border: 1px solid rgb(230, 230, 230); color: white; padding: 4px;">
-
-        <kapi-maliyet-form [span]="170" [label]="'Yön'">
-            <p-dropdown form-control [options]="yon" [(ngModel)]="frm.yon" optionLabel="ad"
-                (ngModelChange)="onYonChange(frm.yon)" />
-        </kapi-maliyet-form>
-        <kapi-maliyet-form [span]="170" [label]="'Kapı Yüksekliği'">
-            <p-dropdown form-control [options]="kapiYuksekligi" [(ngModel)]="frm.kapiYuksekligi" optionLabel="ad"
-                (ngModelChange)="onKapiYuksekligiChange(frm.kapiYuksekligi)" />
-        </kapi-maliyet-form>
-        <kapi-maliyet-form [span]="170" [label]="'Kapı Genişliği'">
-            <p-dropdown form-control [options]="kapiGenisligi" [(ngModel)]="frm.kapiGenisligi" optionLabel="ad"
-                (ngModelChange)="onKapiGenisligiChange(frm.kapiGenisligi)" />
-        </kapi-maliyet-form>
-
-    </div>
-    <div  style="display: flex; flex-direction: column; border: 1px solid rgb(230, 230, 230); color: white; padding: 4px;">
-    
-        <kapi-maliyet-form [span]="170" [label]="'Kapı Tipi'">
-            <p-dropdown form-control [options]="kapiTipi" [(ngModel)]="frm.kapiTipi" optionLabel="ad"
-                (ngModelChange)="onKapiTipiChange(frm.kapiTipi)" />
-        </kapi-maliyet-form>
-        <kapi-maliyet-form [span]="170" [label]="'Kaplama'">
-            <p-dropdown form-control [options]="kaplama" [(ngModel)]="frm.kaplama" optionLabel="ad"
-                (ngModelChange)="onKaplamaChange(frm.kaplama)" />
-        </kapi-maliyet-form>
-        <mat-radio-group (change)="toggleNode()" [disabled]="radioSelect"
-        aria-labelledby="example-radio-group-label folder-list m-t-md flex gap-5 hover:cursor-pointer"
-        class="example-radio-group"
-        [(ngModel)]="selectedKapiGrup">
-
-        <ng-container *ngFor="let item of menu ">
-            <ng-container *ngFor="let sub of item.submenu; let i = index" >
-                <mat-radio-button class="example-radio-button" [value]="sub.label">{{sub.label}}</mat-radio-button>
-            </ng-container>
-        </ng-container>
-
-    
-
-      </mat-radio-group>
-        <div (click)="urunleriGoster()" form-control style="display: flex; align-items: center; justify-content: center; font-weight: bold; cursor: pointer ; background-color: #7F1D1D;">
-            Ürünleri Göster
-        </div>
-    </div>
-    
-    <div style="display: flex; flex-direction: column; border: 1px solid rgb(230, 230, 230); color: white; padding: 4px;">
-        
-        <kapi-maliyet-form  [span]="196" [label]="'Ortalama Çalışan Maaşı'">
-            <input [disabled]="true" form-control [(ngModel)]="frm.ortalamaPersonelMaasi" 
-            class="form-control shadow-none form-control-nullable" id="exampleFormControlInput1">
-        </kapi-maliyet-form> 
-       
-        <kapi-maliyet-form [span]="196" [label]="'Tahmini Çalışan Sayısı'">
-            <input [disabled]="false" form-control [(ngModel)]="frm.tahminiCalisanSayisi" 
-            class="form-control shadow-none form-control-nullable" id="exampleFormControlInput1">
-        </kapi-maliyet-form> 
-
-        <kapi-maliyet-form [span]="196" [label]="'Günlük kapi Üretimi'">
-            <input [disabled]="false" form-control [(ngModel)]="frm.gunlukUretimSayisi" 
-                   class="form-control shadow-none form-control-nullable" id="exampleFormControlInput1">
-        </kapi-maliyet-form> 
-        
-    </div>
-
-
-     <div style="display: flex; flex-direction: column; border: 1px solid rgb(230, 230, 230); color: white; padding: 4px; background-color: rgb(231 231 231);
-    box-shadow: 5px 3px 30px #858585;">
-
-        <div class="card-container">
-            <div class="card">
-                <div class="label" style="border-bottom-left-radius: 0; font-size: 16px;
-              border-bottom-right-radius: 0; height: 20px;">
-          
-                Ürün Seçimi Yapılmadı!
-
-                </div>
-               
-                <div class="label"
-                  style="display: flex;align-items: center;justify-content: center;font-size: 14px;font-weight: bold;color: gray;
-                  border-top-left-radius: 0;
-              border-top-right-radius: 0;">
-       
-                </div>
-          
-               <div style="display: flex; gap:10px;">
-                <kapi-maliyet-table
-                [malzemeToplam]="malzemeToplam"
-                [iscilikToplam]="iscilikToplam"
-                [genelGiderToplam]="genelGiderToplam" 
-                [toplamMaliyet]="toplamMaliyet"
-                [kasaToplam]="kasaToplam"
-                [panelToplam]="panelToplam"
-                [mekanizmaToplam]="mekanizmaToplam"></kapi-maliyet-table> 
-
-                  <kapi-fiyat-table [fiyatList]="fiyatList"></kapi-fiyat-table> 
-
-              
-                </div>
-
-
-
-              </div>
-          </div>
-
-
-    </div> 
-
-
-</div>
-
-<div  style="display: grid; grid-template-columns:1fr 1fr; gap: 12px;">
-    <div>
-        <kapi-malzeme-giderler-table [malzemeGiderler]="bilesenler" [selectedMalzemeGiderler]="selectedBilesenRow"
-            [malzemeToplam]="malzemeToplam"></kapi-malzeme-giderler-table>
-    </div>
-    <div>
-        <kapi-iscilik-giderler-table [iscilikGiderler]="iscilikGiderler"></kapi-iscilik-giderler-table>
-        <kapi-genel-giderler-table [genelGiderler]="genelGiderler"
-            [selectedGenelGiderler]="selectedBilesenRow"></kapi-genel-giderler-table>
-
-    </div>
-</div>
-
-<p-dialog header="Header" [(visible)]="visible" [modal]="true" [style]="{ width: '50vw' }">
-    <ng-template pTemplate="header">
-        <span  style="font-size: 20px; font-weight: bold;">ÜRÜNLER</span>
-    </ng-template>
-    <p-table id="row-check" [value]="kabinler" dataKey="id" selectionMode="single" [(selection)]="selectedURUN"
-        [scrollable]="true" scrollHeight="400px" [metaKeySelection]="true">
-        <ng-template pTemplate="header">
-            <tr>
-                <th>Ad</th>
-                <th></th>
-            </tr>
-        </ng-template>
-        <ng-template pTemplate="body" let-urun let-rowIndex="rowIndex">
-            <tr [pSelectableRow]="urun" [pSelectableRowIndex]="rowIndex" [pEditableRow]="urun"
-                (click)="onRowClickUrunler(urun)">
-                <td>{{ urun.ad }}</td>
-                <td>
-                    İşlemler
-                </td>
-            </tr>
-        </ng-template>
-    </p-table>
-    <ng-template pTemplate="footer" let-urun>
-        <div (click)="Hesapla(selectedURUN)" style="background-color: #7F1D1D; display: flex; align-items: center; justify-content: center; font-weight: bold;cursor: pointer;"
-            >
-            Hesapla</div>
-    </ng-template>
-</p-dialog>
- -->
 
 
 
@@ -361,8 +204,8 @@
                     
             </p-accordionTab>
             <p-accordionTab header="Genel Giderler (Gün Bazında)">
-                <kapi-genel-giderler-table [genelGiderler]="genelGiderler" 
-                [genelGiderMaliyet]="genelGiderMaliyet"
+                <kapi-genel-giderler-table [genelGiderler]="gruplanmisVeri['Kapı Fabrikası']"
+                [genelGiderToplam]="genelGiderToplam"
                     [selectedGenelGiderler]="selectedBilesenRow"></kapi-genel-giderler-table>
             </p-accordionTab>
         </p-accordion>
