--- a/src/app/pages/maliyet/kasnak-maliyet/kasnak-maliyet.component.html
+++ b/src/app/pages/maliyet/kasnak-maliyet/kasnak-maliyet.component.html
@@ -253,7 +253,7 @@
                     
             </p-accordionTab>
             <p-accordionTab header="Genel Giderler (Gün Bazında)">
-                <kasnak-genel-giderler-table [genelGiderler]="genelGiderler" [genelGiderToplam]="genelGiderToplam"
+                <kasnak-genel-giderler-table [genelGiderler]="gruplanmisVeri['Kabin Fabrikası']" [genelGiderToplam]="genelGiderToplam"
                     [selectedGenelGiderler]="selectedBilesenRow"></kasnak-genel-giderler-table>
             </p-accordionTab>
         </p-accordion>
