--- a/src/app/pages/maliyet/maliyet.component.html
+++ b/src/app/pages/maliyet/maliyet.component.html
@@ -30,7 +30,6 @@
 
 
 <ul class="nav nav-tabs">
-
   <ng-container *ngFor="let item of menu">
       <ng-container *ngFor="let item of item.submenu">
           <li [class.active]="selectedTab === item.tabItem" (click)="selectTab(item)">
@@ -38,13 +37,9 @@
           </li>
       </ng-container>
   </ng-container>
- 
 </ul>
-<div  style="height: calc(100vh - 85px); display: flex; width: 100%;">
-
-
-  <div  style="width: 100%;">
+<div  style="height:calc(100vh - 80px); display: flex; width: 100%;overflow: auto;">
+  <div style="width: 100%;">
       <router-outlet></router-outlet>
-
   </div>
 </div>
