--- a/src/app/pages/maliyet/suspansiyon-maliyet/suspansiyon-maliyet.component.html
+++ b/src/app/pages/maliyet/suspansiyon-maliyet/suspansiyon-maliyet.component.html
@@ -157,7 +157,7 @@
                     
             </p-accordionTab>
             <p-accordionTab header="Genel Giderler (Gün Bazında)">
-                <suspansiyon-genel-giderler-table [genelGiderler]="genelGiderler" [genelGiderToplam]="genelGiderToplam"
+                <suspansiyon-genel-giderler-table [genelGiderler]="gruplanmisVeri['Kabin Fabrikası']" [genelGiderToplam]="genelGiderToplam"
                     [selectedGenelGiderler]="selectedBilesenRow"></suspansiyon-genel-giderler-table>
             </p-accordionTab>
         </p-accordion>
