--- a/src/app/pages/tanimlar/buton/buton.component.html
+++ b/src/app/pages/tanimlar/buton/buton.component.html
@@ -28,7 +28,7 @@
 
       </div>
 
-      <div class="button-grup">
+      <div class="button-grup disabled">
         <div class="img-container">
           <img src="../../../../../assets/icons/refresh.png" alt="">
         </div>
@@ -36,7 +36,7 @@
 
       </div>
 
-      <div class="button-grup">
+      <div class="button-grup disabled">
         <div class="img-container">
           <img src="../../../../../assets/icons/filter.png" alt="">
         </div>
