--- a/src/app/pages/tanimlar/kapi/kapi.component.html
+++ b/src/app/pages/tanimlar/kapi/kapi.component.html
@@ -41,7 +41,7 @@
   
         </div>
   
-        <div class="button-grup">
+        <div class="button-grup disabled">
           <div class="img-container">
             <img src="../../../../../assets/icons/refresh.png" alt="">
           </div>
@@ -49,7 +49,7 @@
   
         </div>
   
-        <div class="button-grup">
+        <div class="button-grup disabled">
           <div class="img-container">
             <img src="../../../../../assets/icons/filter.png" alt="">
           </div>
@@ -64,19 +64,7 @@
           <span class="d-none d-sm-inline button-label">Yazdır</span>
   
         </div>
-  
-  
-        <div class="button-grup " [ngClass]="buttonDisabled?'disabled':''" >
-          <div class="img-container">
-            <img src="../../../../../assets/icons/other.png" alt="">
-          </div>
-          <span class="d-none d-sm-inline button-label">Diğer</span>
-  
-        </div>
-  
-       
-  
-  
+        
       </div>
   
     </div>
