--- a/src/app/pages/tanimlar/urun/urun.component.html
+++ b/src/app/pages/tanimlar/urun/urun.component.html
@@ -33,15 +33,14 @@
   
         </div>
   
-        <div  class="button-grup">
+        <div  class="button-grup disabled">
           <div class="img-container">
             <img src="../../../../../assets/icons/refresh.png" alt="">
           </div>
           <span class="d-none d-sm-inline button-label">Yenile</span>
-  
         </div>
   
-        <div  class="button-grup">
+        <div  class="button-grup disabled">
           <div class="img-container">
             <img src="../../../../../assets/icons/filter.png" alt="">
           </div>
@@ -56,45 +55,9 @@
           <span class="d-none d-sm-inline button-label">Yazdır</span>
   
         </div>
-  
-  
-        <div class="button-grup " [ngClass]="buttonDisabled?'disabled':''" aria-expanded="false"
-          data-bs-toggle="dropdown">
-          <div class="img-container">
-            <img src="../../../../../assets/icons/other.png" alt="">
-          </div>
-          <span class="d-none d-sm-inline button-label">Diğer</span>
-  
-        </div>
-  
-        <ul class="dropdown-menu dropdown-action-menu" style="z-index: 9999;">
-          <li type="button">
-            <a class="dropdown-item dropdown-action-item">Teklif Al</a>
-          </li>
-          <li type="button">
-            <a class="dropdown-item dropdown-action-item">Sipariş Ver</a>
-          </li>
-  
-  
-  
-        </ul>
-  
-  
+
         <!-- <p-divider layout="vertical"></p-divider> -->
-  
-  
-  
-  
-  
-  
-  
-  
-  
-  
-  
-  
-      
-  
+
       </div>
   
     </div>
