--- a/src/app/pages/maliyet/buton-maliyet/buton-maliyet.component.html
+++ b/src/app/pages/maliyet/buton-maliyet/buton-maliyet.component.html
@@ -1,107 +1,3 @@
-<!-- 
-<div  style="display: grid; grid-template-columns:3fr 1fr 2fr 2fr ; gap: 4px;">
-
-
-    <div  style="display: flex; flex-direction: column; border: 1px solid rgb(230, 230, 230); color: white; padding: 4px;">
-
-        <buton-maliyet-form [span]="170" [label]="'Buton tipi'">
-            <p-dropdown form-control [options]="butonTipi" [(ngModel)]="frm.butonTipi" optionLabel="ad"
-                (ngModelChange)="onButonTipiChange(frm.butonTipi)" />
-        </buton-maliyet-form>
-        <buton-maliyet-form [span]="170" [label]="'Buton Çeşidi'">
-            <p-dropdown form-control [options]="butonCesidi" [(ngModel)]="frm.butonCesidi" optionLabel="ad"
-                (ngModelChange)="onButonCesidiChange(frm.butonCesidi)" />
-        </buton-maliyet-form>
-        <buton-maliyet-form [span]="170" [label]="'Durak Sayısı'">
-            <p-dropdown form-control [options]="durakSayisi" [(ngModel)]="frm.durakSayisi" optionLabel="ad"
-                (ngModelChange)="onDurakSayisiChange(frm.durakSayisi)" />
-        </buton-maliyet-form>
-
-        <buton-maliyet-form [span]="170" [label]="'Boy Özellik'">
-            <p-dropdown form-control [options]="boyOzellik" [(ngModel)]="frm.boyOzellik" optionLabel="ad"
-                (ngModelChange)="onBoyOzellikChange(frm.boyOzellik)" />
-        </buton-maliyet-form>
-        <div (click)="urunleriGoster()" form-control style="display: flex; align-items: center; justify-content: center; font-weight: bold; cursor: pointer ; background-color: #7F1D1D;">
-            Ürünleri Göster
-        </div>
-    </div>
-
-    <div style="display: flex; flex-direction: column; border: 1px solid rgb(230, 230, 230); color: white; padding: 4px;">
-        
-        <buton-maliyet-form  [span]="196" [label]="'Ortalama Çalışan Maaşı'">
-            <input [disabled]="true" form-control [(ngModel)]="frm.ortalamaPersonelMaasi" 
-            class="form-control shadow-none form-control-nullable" id="exampleFormControlInput1">
-        </buton-maliyet-form> 
-       
-        <buton-maliyet-form [span]="196" [label]="'Tahmini Çalışan Sayısı'">
-            <input [disabled]="false" form-control [(ngModel)]="frm.tahminiCalisanSayisi" 
-            class="form-control shadow-none form-control-nullable" id="exampleFormControlInput1">
-        </buton-maliyet-form> 
-
-        <buton-maliyet-form [span]="196" [label]="'Günlük Buton Üretimi'">
-            <input [disabled]="false" form-control [(ngModel)]="frm.gunlukUretimSayisi" 
-                   class="form-control shadow-none form-control-nullable" id="exampleFormControlInput1">
-        </buton-maliyet-form> 
-        
-    </div>
-    <div style="display: flex; flex-direction: column; border: 1px solid rgb(230, 230, 230); color: white; padding: 4px;  background-color: rgb(231 231 231);
-    box-shadow: 5px 3px 30px #858585;">
-        <buton-maliyet-table [malzemeToplam]="malzemeToplam" [malzemeToplam]="malzemeToplam" [iscilikToplam]="iscilikToplam" [genelGiderToplam]="genelGiderToplam" [toplamMaliyet]="toplamMaliyet"></buton-maliyet-table>
-    </div>
-    <div style="display: flex; flex-direction: column; border: 1px solid rgb(230, 230, 230); color: white; padding: 4px; background-color: rgb(231 231 231);
-    box-shadow: 5px 3px 30px #858585;">
-        <buton-fiyat-table></buton-fiyat-table>
-    </div>
-</div>
-
-<div  style="display: grid; grid-template-columns:1fr 1fr; gap: 12px;">
-    <div>
-        <buton-malzeme-giderler-table [malzemeGiderler]="bilesenler" [selectedMalzemeGiderler]="selectedBilesenRow"
-            [malzemeToplam]="malzemeToplam"></buton-malzeme-giderler-table>
-    </div>
-    <div>
-        <buton-iscilik-giderler-table [iscilikGiderler]="iscilikGiderler"></buton-iscilik-giderler-table>
-        <buton-genel-giderler-table [genelGiderler]="genelGiderler"
-            [selectedGenelGiderler]="selectedBilesenRow"></buton-genel-giderler-table>
-
-    </div>
-</div>
-
-<p-dialog header="Header" [(visible)]="visible" [modal]="true" [style]="{ width: '50vw' }">
-    <ng-template pTemplate="header">
-        <span  style="font-size: 20px; font-weight: bold;">ÜRÜNLER</span>
-    </ng-template>
-    <p-table id="row-check" [value]="urunler" dataKey="id" selectionMode="single" [(selection)]="selectedURUN"
-        [scrollable]="true" scrollHeight="400px" [metaKeySelection]="true">
-        <ng-template pTemplate="header">
-            <tr>
-                <th>Ad</th>
-                <th></th>
-            </tr>
-        </ng-template>
-        <ng-template pTemplate="body" let-urun let-rowIndex="rowIndex">
-            <tr [pSelectableRow]="urun" [pSelectableRowIndex]="rowIndex" [pEditableRow]="urun"
-                (click)="onRowClickUrunler(urun)">
-                <td>{{ urun.ad }}</td>
-                <td>
-                    İşlemler
-                </td>
-            </tr>
-        </ng-template>
-    </p-table>
-    <ng-template pTemplate="footer" let-urun>
-        <div (click)="Hesapla(selectedURUN)" style="background-color: #7F1D1D; display: flex; align-items: center; justify-content: center; font-weight: bold;cursor: pointer;"
-            >
-            Hesapla</div>
-    </ng-template>
-</p-dialog>
-
- -->
-
-
-
-
-
 
 
 
@@ -224,7 +120,7 @@
                             </div>
 
                             <buton-maliyet-table [malzemeToplam]="malzemeToplam" [iscilikToplam]="iscilikToplam"
-                                [genelGiderToplam]="genelGiderToplam/frm.personelSayisi"
+                                [genelGiderToplam]="genelGiderToplam/frm.gunlukUretimSayisi"
                                 [toplamMaliyet]="toplamMaliyet"></buton-maliyet-table>
 
                             <buton-fiyat-table [pesinFiyat]="pesinFiyat"
@@ -253,7 +149,7 @@
                     
             </p-accordionTab>
             <p-accordionTab header="Genel Giderler (Gün Bazında)">
-                <buton-genel-giderler-table [genelGiderler]="genelGiderler" [genelGiderToplam]="genelGiderToplam"
+                <buton-genel-giderler-table [genelGiderler]="gruplanmisVeri['Kabin Fabrikası']" [genelGiderToplam]="genelGiderToplam"
                     [selectedGenelGiderler]="selectedBilesenRow"></buton-genel-giderler-table>
             </p-accordionTab>
         </p-accordion>
