--- a/src/app/pages/tanimlar/personel/personel.component.html
+++ b/src/app/pages/tanimlar/personel/personel.component.html
@@ -33,7 +33,7 @@
 
       </div>
 
-      <div  class="button-grup">
+      <div  class="button-grup disabled">
         <div class="img-container">
           <img src="../../../../../assets/icons/refresh.png" alt="">
         </div>
@@ -41,7 +41,7 @@
 
       </div>
 
-      <div  class="button-grup">
+      <div  class="button-grup disabled">
         <div class="img-container">
           <img src="../../../../../assets/icons/filter.png" alt="">
         </div>
