--- a/src/app/pages/tanimlar/tanimlar.component.html
+++ b/src/app/pages/tanimlar/tanimlar.component.html
@@ -3,8 +3,8 @@
 
     <ng-container *ngFor="let item of menu">
         <ng-container *ngFor="let item of item.submenu">
-            <li [class.active]="selectedTab === item.tabItem" (click)="selectTab(item)">
-                <a class="tab-item">{{item.label}}</a>
+            <li [class.active]="selectedTab === item.tabItem" (click)="selectTab(item)" >
+                <a class="tab-item text-slate-600 text-2xl group-hover:text-cyan-700" >{{item.label}}</a>
             </li>
         </ng-container>
     </ng-container>
